XSTJ-52 do not depend on or bundle "endorsed" XML parsers